Wed Aug 06 07:10:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_accel.py,xappy/unittests/range_speed.py:
	  Add standard copyright headers.

Wed Aug 06 07:09:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/queries.rst: Add a placeholder for documenting
	  query_external_weight().

Tue Aug 05 14:21:03 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Explain why we multiply the range
	  accel searches by 0.

Tue Aug 05 11:11:39 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/unittests/similar.py: Add test
	  case for similarity search with a non-indexed document, and fix
	  the remaining problems which that threw up.

Tue Aug 05 09:35:16 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_speed.py: Fix test to make problem more
	  obvious.

Tue Aug 05 08:08:12 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Convert
	  the IndexerConnection._allocate_id() method into a function, so
	  that SearchConnection can use it too.  Use it in SearchConnection
	  to allocate IDs in the temporary database correctly.

Tue Aug 05 08:02:19 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/searchconn_process.py: Add comment explaining
	  test case.

Tue Aug 05 07:37:49 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Support ProcessedDocument or
	  UnprocessedDocument objects in the list of ids for
	  query_similar().  As yet untested and undocumented.

Tue Aug 05 06:22:51 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/__init__.py,xappy/fieldactions.py,xappy/searchconnection.py,
	  xappy/unittests/searchconn_process.py,
	  xappy/unittests/weight_external.py: Add support for using an
	  external source of weight information in searches.  This is a bit