@@ -1,3 +1,10 @@
+Wed Aug 06 07:11:23 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/indexerconnection.py,xappy/searchconnection.py,
+	  xappy/unittests/dociter.py: Add support for iterating through all
+	  the documents to get a list directly, rather than having to call
+	  get_document() on every item returned by iterids().
+
 Wed Aug 06 07:10:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/unittests/range_accel.py,xappy/unittests/range_speed.py:
